# levekostnadskalkulator

./: .gitignore  00_Boligkostnadskalkulatoren.py  00_🏠_Hjem.py  LICENSE  app.py  boligpriskalkulator.py  dev_notebook.ipynb  dev_optimise_plots.ipynb  dev_scenariostate.ipynb  environment.yml  gcs.dockerfile  pyproject.toml  readme.md  ræl.py  variables.toml
.devcontainer/: devcontainer.json
classes/: state_manager.py
functions/: calc_funcs.py  calc_functions.py  formatters.py  input_logic_funcs.py  metric_cards.py  plot_figures.py  plot_funcs.py  util_funcs.py
pages/: 01_💰_Lånekostnadskalkulator.py  01_💸_Lånekostnadskalkulator.py  02_⚡_Strømkostnadskalkulator.py  03_🏗️_Bygg_ditt_eget_kostnadsscenario.py  03_💰_Bygg_ditt_eget_kostnadsscenario.py  Bygg_ditt_eget_kostnadsscenario.py  Kostnader_relatert_til_strøm.py  Lånekostnadskalkulator.py  Scenarioanalyse.py  Strømkostnadskalkulator.py  kostnadsscenario_v2.py  strøm_v2.py
profiling_scripts/: profile_plot_funcs.py  profile_scenario_builder.py
tests/: calc_func_tests.py  plot_figures_tests.py
